entity_macros/tests/ui/attribute/conflicting-field-named-id.stderr
error: Field named id reserved for ent
 --> $DIR/conflicting-field-named-id.rs:6:5
  |
6 |     #[ent(field)]
  |     ^
